--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,8 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "",
-            "email": ""
+            "name": "wbe",
+            "email": "office@it-wbe.com"
         }
     ],
     "require": {
